instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:2: error: not found: value blue
setCouleurBrosse(blue)
                 ^